# videoplayer

./: .clang-format  .gitmodules  CMakeLists.txt  Gfx.cpp  Gfx.h  H264.cpp  H264.h  MP4.cpp  MP4.h  README.md  main.cpp
cmake/: embed.cmake
shaders/: CMakeLists.txt  nv12torgb.frag  nv12torgb.vert
